src/objects/Zephr_User_Grant__c.object
<CustomObject>
    <description>Used only for trials?</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipName>Zephr_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Zephr_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription User</label>
        <referenceTo>Subscription_User__c</referenceTo>
        <relationshipLabel>Zephr User Grants</relationshipLabel>
        <relationshipName>Zephr_User_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Zephr User Grants</relationshipLabel>
        <relationshipName>Zephr_User_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_API_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://console.zephr.com/v3/users/&apos;+ Zephr_User__r.Zephr_Id__c +&apos;/grants/&apos;+ Zephr_Id__c, &apos;Open in Zephr&apos; , &apos;_blank&apos;)</formula>
        <label>Zephr API URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zephr Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Message__c</fullName>
        <label>Zephr Integration Message</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Status__c</fullName>
        <label>Zephr Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Integration_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zephr_Tenant__c</fullName>
        <description>Zephr tenant this grant is attached to</description>
        <inlineHelpText>Zephr tenant this grant is attached to</inlineHelpText>
        <label>Zephr Tenant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Tenant</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zephr_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User for the Grant</description>
        <label>Zephr User</label>
        <referenceTo>Zephr_User__c</referenceTo>
        <relationshipName>Zephr_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zephr User Grant</label>
    <nameField>
        <displayFormat>GRNT-{000000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zephr User Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>